// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image should render correctly 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  cursor: initial;
  object-fit: contain;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Image
    height="100%"
    name="logo"
    selectable={false}
    theme={
      Object {
        "buttonBackgroundColor": "#004A7C",
        "buttonColor": "#FFF",
        "buttonHoverColor": "#0068af",
        "cartridgeBackgroundColor": "#004A7C",
        "cartridgeColor": "#FFF",
        "circleBadgeBackgroundColor": "#CCC",
        "circleBadgeHoverColor": "#004A7C",
        "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
        "dropdownColor": "#545456",
        "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
        "iconColor": "#545456",
        "iconHoverColor": "#757679",
        "inputBackgroundColor": "#FFF",
        "inputBorderColor": "#CCC",
        "inputColor": "#545456",
        "linkColor": "#545456",
        "linkHoverColor": "#004A7C",
        "panelBackgroundColor": "#FFF",
        "panelShadowColor": "#EEF2F5",
        "searchBarIconBackgroundColor": "#FFCA00",
        "searchBarInputBackgroundColor": "#FFF",
        "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
        "searchBarUnderlinedBorderColor": "#CCC",
        "sectionBackgroundColor": "#004A7C",
        "tabMenuBarColor": "#FFCA00",
        "tabMenuBorderColor": "#EEF2F5",
        "tableCellEvenBackgroundColor": "#F8F8F8",
        "tableCellOddBackgroundColor": "#FFF",
        "tableHeaderColor": "#999B9E",
        "tableShadowColor": "#EEF2F5",
        "textColor": "#545456",
      }
    }
    width="100%"
  >
    <styled.img
      height="100%"
      name="logo"
      selectable={false}
      theme={
        Object {
          "buttonBackgroundColor": "#004A7C",
          "buttonColor": "#FFF",
          "buttonHoverColor": "#0068af",
          "cartridgeBackgroundColor": "#004A7C",
          "cartridgeColor": "#FFF",
          "circleBadgeBackgroundColor": "#CCC",
          "circleBadgeHoverColor": "#004A7C",
          "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
          "dropdownColor": "#545456",
          "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
          "iconColor": "#545456",
          "iconHoverColor": "#757679",
          "inputBackgroundColor": "#FFF",
          "inputBorderColor": "#CCC",
          "inputColor": "#545456",
          "linkColor": "#545456",
          "linkHoverColor": "#004A7C",
          "panelBackgroundColor": "#FFF",
          "panelShadowColor": "#EEF2F5",
          "searchBarIconBackgroundColor": "#FFCA00",
          "searchBarInputBackgroundColor": "#FFF",
          "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
          "searchBarUnderlinedBorderColor": "#CCC",
          "sectionBackgroundColor": "#004A7C",
          "tabMenuBarColor": "#FFCA00",
          "tabMenuBorderColor": "#EEF2F5",
          "tableCellEvenBackgroundColor": "#F8F8F8",
          "tableCellOddBackgroundColor": "#FFF",
          "tableHeaderColor": "#999B9E",
          "tableShadowColor": "#EEF2F5",
          "textColor": "#545456",
        }
      }
      width="100%"
    >
      <img
        alt="logo"
        className="c0"
        height="100%"
        name="logo"
        src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiPz4KPCEtLSBHZW5lcmF0b3I6IEFkb2JlIElsbHVzdHJhdG9yIDIxLjAuMSwgU1ZHIEV4cG9ydCBQbHVnLUluIC4gU1ZHIFZlcnNpb246IDYuMDAgQnVpbGQgMCkgIC0tPgo8c3ZnIHZlcnNpb249IjEuMSIgaWQ9IkxheWVyXzEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIHg9IjBweCIgeT0iMHB4IgoJIHZpZXdCb3g9IjAgMCAxMDMuOSAxMDMuOSIgc3R5bGU9ImVuYWJsZS1iYWNrZ3JvdW5kOm5ldyAwIDAgMTAzLjkgMTAzLjk7IiB4bWw6c3BhY2U9InByZXNlcnZlIj4KPHN0eWxlIHR5cGU9InRleHQvY3NzIj4KCS5zdDB7ZmlsbDojMDBBRUU2O30KCS5zdDF7ZmlsbDojMTIzOTYyO30KCS5zdDJ7ZmlsbDojQjFENEU1O30KCS5zdDN7ZmlsbDojMjc1NEJBO30KCS5zdDR7ZmlsbDojNzk5RUIyO30KPC9zdHlsZT4KPGc+Cgk8cGF0aCBjbGFzcz0ic3QwIiBkPSJNMzguNiw1MkwxNyw3My41bDI3LjEsMjcuMWM0LjQsNC40LDExLjQsNC40LDE1LjgsMGwyNy4xLTI3LjFMNjUuMyw1Mkw1MiwzOC42TDM4LjYsNTJ6Ii8+Cgk8cGF0aCBjbGFzcz0ic3QxIiBkPSJNMTcsMzAuNEwzLjMsNDQuMWMtNC40LDQuNC00LjQsMTEuNCwwLDE1LjhMMTcsNzMuNUwzOC42LDUyTDUyLDM4LjZMMzAuNCwxN0wxNywzMC40eiIvPgoJPHBhdGggY2xhc3M9InN0MiIgZD0iTTczLjUsNjAuMWwxMy40LDEzLjRsMTMuNy0xMy43YzQuNC00LjQsNC40LTExLjQsMC0xNS44bC01LjUtNS41TDczLjUsNjAuMXoiLz4KCTxwb2x5Z29uIGNsYXNzPSJzdDIiIHBvaW50cz0iNjUuMyw1MiA2NS4zLDUyIDUyLDM4LjYgNzMuNSwxNyA3My41LDE3IDUyLDM4LjYgCSIvPgoJPHBvbHlnb24gY2xhc3M9InN0MyIgcG9pbnRzPSI1MiwzOC42IDY1LjMsNTIgNzMuNSw2MC4xIDk1LjEsMzguNiA4Ni45LDMwLjQgNzMuNSwxNyAJIi8+Cgk8cGF0aCBjbGFzcz0ic3Q0IiBkPSJNNzMuNSwxN0w1OS44LDMuM2MtNC40LTQuNC0xMS40LTQuNC0xNS44LDBMMzAuNCwxN0w1MiwzOC42TDczLjUsMTd6Ii8+CjwvZz4KPC9zdmc+Cg=="
        width="100%"
      />
    </styled.img>
  </Image>
</ThemeProvider>
`;

exports[`Image should render correctly width width 1`] = `
.c0 {
  width: 200px;
  height: 100%;
  cursor: initial;
  object-fit: contain;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Image
    height="100%"
    name="logo"
    selectable={false}
    theme={
      Object {
        "buttonBackgroundColor": "#004A7C",
        "buttonColor": "#FFF",
        "buttonHoverColor": "#0068af",
        "cartridgeBackgroundColor": "#004A7C",
        "cartridgeColor": "#FFF",
        "circleBadgeBackgroundColor": "#CCC",
        "circleBadgeHoverColor": "#004A7C",
        "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
        "dropdownColor": "#545456",
        "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
        "iconColor": "#545456",
        "iconHoverColor": "#757679",
        "inputBackgroundColor": "#FFF",
        "inputBorderColor": "#CCC",
        "inputColor": "#545456",
        "linkColor": "#545456",
        "linkHoverColor": "#004A7C",
        "panelBackgroundColor": "#FFF",
        "panelShadowColor": "#EEF2F5",
        "searchBarIconBackgroundColor": "#FFCA00",
        "searchBarInputBackgroundColor": "#FFF",
        "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
        "searchBarUnderlinedBorderColor": "#CCC",
        "sectionBackgroundColor": "#004A7C",
        "tabMenuBarColor": "#FFCA00",
        "tabMenuBorderColor": "#EEF2F5",
        "tableCellEvenBackgroundColor": "#F8F8F8",
        "tableCellOddBackgroundColor": "#FFF",
        "tableHeaderColor": "#999B9E",
        "tableShadowColor": "#EEF2F5",
        "textColor": "#545456",
      }
    }
    width="200px"
  >
    <styled.img
      height="100%"
      name="logo"
      selectable={false}
      theme={
        Object {
          "buttonBackgroundColor": "#004A7C",
          "buttonColor": "#FFF",
          "buttonHoverColor": "#0068af",
          "cartridgeBackgroundColor": "#004A7C",
          "cartridgeColor": "#FFF",
          "circleBadgeBackgroundColor": "#CCC",
          "circleBadgeHoverColor": "#004A7C",
          "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
          "dropdownColor": "#545456",
          "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
          "iconColor": "#545456",
          "iconHoverColor": "#757679",
          "inputBackgroundColor": "#FFF",
          "inputBorderColor": "#CCC",
          "inputColor": "#545456",
          "linkColor": "#545456",
          "linkHoverColor": "#004A7C",
          "panelBackgroundColor": "#FFF",
          "panelShadowColor": "#EEF2F5",
          "searchBarIconBackgroundColor": "#FFCA00",
          "searchBarInputBackgroundColor": "#FFF",
          "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
          "searchBarUnderlinedBorderColor": "#CCC",
          "sectionBackgroundColor": "#004A7C",
          "tabMenuBarColor": "#FFCA00",
          "tabMenuBorderColor": "#EEF2F5",
          "tableCellEvenBackgroundColor": "#F8F8F8",
          "tableCellOddBackgroundColor": "#FFF",
          "tableHeaderColor": "#999B9E",
          "tableShadowColor": "#EEF2F5",
          "textColor": "#545456",
        }
      }
      width="200px"
    >
      <img
        alt="logo"
        className="c0"
        height="100%"
        name="logo"
        src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiPz4KPCEtLSBHZW5lcmF0b3I6IEFkb2JlIElsbHVzdHJhdG9yIDIxLjAuMSwgU1ZHIEV4cG9ydCBQbHVnLUluIC4gU1ZHIFZlcnNpb246IDYuMDAgQnVpbGQgMCkgIC0tPgo8c3ZnIHZlcnNpb249IjEuMSIgaWQ9IkxheWVyXzEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIHg9IjBweCIgeT0iMHB4IgoJIHZpZXdCb3g9IjAgMCAxMDMuOSAxMDMuOSIgc3R5bGU9ImVuYWJsZS1iYWNrZ3JvdW5kOm5ldyAwIDAgMTAzLjkgMTAzLjk7IiB4bWw6c3BhY2U9InByZXNlcnZlIj4KPHN0eWxlIHR5cGU9InRleHQvY3NzIj4KCS5zdDB7ZmlsbDojMDBBRUU2O30KCS5zdDF7ZmlsbDojMTIzOTYyO30KCS5zdDJ7ZmlsbDojQjFENEU1O30KCS5zdDN7ZmlsbDojMjc1NEJBO30KCS5zdDR7ZmlsbDojNzk5RUIyO30KPC9zdHlsZT4KPGc+Cgk8cGF0aCBjbGFzcz0ic3QwIiBkPSJNMzguNiw1MkwxNyw3My41bDI3LjEsMjcuMWM0LjQsNC40LDExLjQsNC40LDE1LjgsMGwyNy4xLTI3LjFMNjUuMyw1Mkw1MiwzOC42TDM4LjYsNTJ6Ii8+Cgk8cGF0aCBjbGFzcz0ic3QxIiBkPSJNMTcsMzAuNEwzLjMsNDQuMWMtNC40LDQuNC00LjQsMTEuNCwwLDE1LjhMMTcsNzMuNUwzOC42LDUyTDUyLDM4LjZMMzAuNCwxN0wxNywzMC40eiIvPgoJPHBhdGggY2xhc3M9InN0MiIgZD0iTTczLjUsNjAuMWwxMy40LDEzLjRsMTMuNy0xMy43YzQuNC00LjQsNC40LTExLjQsMC0xNS44bC01LjUtNS41TDczLjUsNjAuMXoiLz4KCTxwb2x5Z29uIGNsYXNzPSJzdDIiIHBvaW50cz0iNjUuMyw1MiA2NS4zLDUyIDUyLDM4LjYgNzMuNSwxNyA3My41LDE3IDUyLDM4LjYgCSIvPgoJPHBvbHlnb24gY2xhc3M9InN0MyIgcG9pbnRzPSI1MiwzOC42IDY1LjMsNTIgNzMuNSw2MC4xIDk1LjEsMzguNiA4Ni45LDMwLjQgNzMuNSwxNyAJIi8+Cgk8cGF0aCBjbGFzcz0ic3Q0IiBkPSJNNzMuNSwxN0w1OS44LDMuM2MtNC40LTQuNC0xMS40LTQuNC0xNS44LDBMMzAuNCwxN0w1MiwzOC42TDczLjUsMTd6Ii8+CjwvZz4KPC9zdmc+Cg=="
        width="200px"
      />
    </styled.img>
  </Image>
</ThemeProvider>
`;

exports[`Image should render correctly with height 1`] = `
.c0 {
  width: 100%;
  height: 50px;
  cursor: initial;
  object-fit: contain;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Image
    height="50px"
    name="logo"
    selectable={false}
    theme={
      Object {
        "buttonBackgroundColor": "#004A7C",
        "buttonColor": "#FFF",
        "buttonHoverColor": "#0068af",
        "cartridgeBackgroundColor": "#004A7C",
        "cartridgeColor": "#FFF",
        "circleBadgeBackgroundColor": "#CCC",
        "circleBadgeHoverColor": "#004A7C",
        "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
        "dropdownColor": "#545456",
        "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
        "iconColor": "#545456",
        "iconHoverColor": "#757679",
        "inputBackgroundColor": "#FFF",
        "inputBorderColor": "#CCC",
        "inputColor": "#545456",
        "linkColor": "#545456",
        "linkHoverColor": "#004A7C",
        "panelBackgroundColor": "#FFF",
        "panelShadowColor": "#EEF2F5",
        "searchBarIconBackgroundColor": "#FFCA00",
        "searchBarInputBackgroundColor": "#FFF",
        "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
        "searchBarUnderlinedBorderColor": "#CCC",
        "sectionBackgroundColor": "#004A7C",
        "tabMenuBarColor": "#FFCA00",
        "tabMenuBorderColor": "#EEF2F5",
        "tableCellEvenBackgroundColor": "#F8F8F8",
        "tableCellOddBackgroundColor": "#FFF",
        "tableHeaderColor": "#999B9E",
        "tableShadowColor": "#EEF2F5",
        "textColor": "#545456",
      }
    }
    width="100%"
  >
    <styled.img
      height="50px"
      name="logo"
      selectable={false}
      theme={
        Object {
          "buttonBackgroundColor": "#004A7C",
          "buttonColor": "#FFF",
          "buttonHoverColor": "#0068af",
          "cartridgeBackgroundColor": "#004A7C",
          "cartridgeColor": "#FFF",
          "circleBadgeBackgroundColor": "#CCC",
          "circleBadgeHoverColor": "#004A7C",
          "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
          "dropdownColor": "#545456",
          "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
          "iconColor": "#545456",
          "iconHoverColor": "#757679",
          "inputBackgroundColor": "#FFF",
          "inputBorderColor": "#CCC",
          "inputColor": "#545456",
          "linkColor": "#545456",
          "linkHoverColor": "#004A7C",
          "panelBackgroundColor": "#FFF",
          "panelShadowColor": "#EEF2F5",
          "searchBarIconBackgroundColor": "#FFCA00",
          "searchBarInputBackgroundColor": "#FFF",
          "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
          "searchBarUnderlinedBorderColor": "#CCC",
          "sectionBackgroundColor": "#004A7C",
          "tabMenuBarColor": "#FFCA00",
          "tabMenuBorderColor": "#EEF2F5",
          "tableCellEvenBackgroundColor": "#F8F8F8",
          "tableCellOddBackgroundColor": "#FFF",
          "tableHeaderColor": "#999B9E",
          "tableShadowColor": "#EEF2F5",
          "textColor": "#545456",
        }
      }
      width="100%"
    >
      <img
        alt="logo"
        className="c0"
        height="50px"
        name="logo"
        src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiPz4KPCEtLSBHZW5lcmF0b3I6IEFkb2JlIElsbHVzdHJhdG9yIDIxLjAuMSwgU1ZHIEV4cG9ydCBQbHVnLUluIC4gU1ZHIFZlcnNpb246IDYuMDAgQnVpbGQgMCkgIC0tPgo8c3ZnIHZlcnNpb249IjEuMSIgaWQ9IkxheWVyXzEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIHg9IjBweCIgeT0iMHB4IgoJIHZpZXdCb3g9IjAgMCAxMDMuOSAxMDMuOSIgc3R5bGU9ImVuYWJsZS1iYWNrZ3JvdW5kOm5ldyAwIDAgMTAzLjkgMTAzLjk7IiB4bWw6c3BhY2U9InByZXNlcnZlIj4KPHN0eWxlIHR5cGU9InRleHQvY3NzIj4KCS5zdDB7ZmlsbDojMDBBRUU2O30KCS5zdDF7ZmlsbDojMTIzOTYyO30KCS5zdDJ7ZmlsbDojQjFENEU1O30KCS5zdDN7ZmlsbDojMjc1NEJBO30KCS5zdDR7ZmlsbDojNzk5RUIyO30KPC9zdHlsZT4KPGc+Cgk8cGF0aCBjbGFzcz0ic3QwIiBkPSJNMzguNiw1MkwxNyw3My41bDI3LjEsMjcuMWM0LjQsNC40LDExLjQsNC40LDE1LjgsMGwyNy4xLTI3LjFMNjUuMyw1Mkw1MiwzOC42TDM4LjYsNTJ6Ii8+Cgk8cGF0aCBjbGFzcz0ic3QxIiBkPSJNMTcsMzAuNEwzLjMsNDQuMWMtNC40LDQuNC00LjQsMTEuNCwwLDE1LjhMMTcsNzMuNUwzOC42LDUyTDUyLDM4LjZMMzAuNCwxN0wxNywzMC40eiIvPgoJPHBhdGggY2xhc3M9InN0MiIgZD0iTTczLjUsNjAuMWwxMy40LDEzLjRsMTMuNy0xMy43YzQuNC00LjQsNC40LTExLjQsMC0xNS44bC01LjUtNS41TDczLjUsNjAuMXoiLz4KCTxwb2x5Z29uIGNsYXNzPSJzdDIiIHBvaW50cz0iNjUuMyw1MiA2NS4zLDUyIDUyLDM4LjYgNzMuNSwxNyA3My41LDE3IDUyLDM4LjYgCSIvPgoJPHBvbHlnb24gY2xhc3M9InN0MyIgcG9pbnRzPSI1MiwzOC42IDY1LjMsNTIgNzMuNSw2MC4xIDk1LjEsMzguNiA4Ni45LDMwLjQgNzMuNSwxNyAJIi8+Cgk8cGF0aCBjbGFzcz0ic3Q0IiBkPSJNNzMuNSwxN0w1OS44LDMuM2MtNC40LTQuNC0xMS40LTQuNC0xNS44LDBMMzAuNCwxN0w1MiwzOC42TDczLjUsMTd6Ii8+CjwvZz4KPC9zdmc+Cg=="
        width="100%"
      />
    </styled.img>
  </Image>
</ThemeProvider>
`;

exports[`Image should render correctly with name 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  cursor: initial;
  object-fit: contain;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Image
    height="100%"
    name="brand"
    selectable={false}
    theme={
      Object {
        "buttonBackgroundColor": "#004A7C",
        "buttonColor": "#FFF",
        "buttonHoverColor": "#0068af",
        "cartridgeBackgroundColor": "#004A7C",
        "cartridgeColor": "#FFF",
        "circleBadgeBackgroundColor": "#CCC",
        "circleBadgeHoverColor": "#004A7C",
        "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
        "dropdownColor": "#545456",
        "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
        "iconColor": "#545456",
        "iconHoverColor": "#757679",
        "inputBackgroundColor": "#FFF",
        "inputBorderColor": "#CCC",
        "inputColor": "#545456",
        "linkColor": "#545456",
        "linkHoverColor": "#004A7C",
        "panelBackgroundColor": "#FFF",
        "panelShadowColor": "#EEF2F5",
        "searchBarIconBackgroundColor": "#FFCA00",
        "searchBarInputBackgroundColor": "#FFF",
        "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
        "searchBarUnderlinedBorderColor": "#CCC",
        "sectionBackgroundColor": "#004A7C",
        "tabMenuBarColor": "#FFCA00",
        "tabMenuBorderColor": "#EEF2F5",
        "tableCellEvenBackgroundColor": "#F8F8F8",
        "tableCellOddBackgroundColor": "#FFF",
        "tableHeaderColor": "#999B9E",
        "tableShadowColor": "#EEF2F5",
        "textColor": "#545456",
      }
    }
    width="100%"
  >
    <styled.img
      height="100%"
      name="brand"
      selectable={false}
      theme={
        Object {
          "buttonBackgroundColor": "#004A7C",
          "buttonColor": "#FFF",
          "buttonHoverColor": "#0068af",
          "cartridgeBackgroundColor": "#004A7C",
          "cartridgeColor": "#FFF",
          "circleBadgeBackgroundColor": "#CCC",
          "circleBadgeHoverColor": "#004A7C",
          "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
          "dropdownColor": "#545456",
          "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
          "iconColor": "#545456",
          "iconHoverColor": "#757679",
          "inputBackgroundColor": "#FFF",
          "inputBorderColor": "#CCC",
          "inputColor": "#545456",
          "linkColor": "#545456",
          "linkHoverColor": "#004A7C",
          "panelBackgroundColor": "#FFF",
          "panelShadowColor": "#EEF2F5",
          "searchBarIconBackgroundColor": "#FFCA00",
          "searchBarInputBackgroundColor": "#FFF",
          "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
          "searchBarUnderlinedBorderColor": "#CCC",
          "sectionBackgroundColor": "#004A7C",
          "tabMenuBarColor": "#FFCA00",
          "tabMenuBorderColor": "#EEF2F5",
          "tableCellEvenBackgroundColor": "#F8F8F8",
          "tableCellOddBackgroundColor": "#FFF",
          "tableHeaderColor": "#999B9E",
          "tableShadowColor": "#EEF2F5",
          "textColor": "#545456",
        }
      }
      width="100%"
    >
      <img
        alt="brand"
        className="c0"
        height="100%"
        name="brand"
        src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiPz4KPCEtLSBHZW5lcmF0b3I6IEFkb2JlIElsbHVzdHJhdG9yIDIxLjAuMSwgU1ZHIEV4cG9ydCBQbHVnLUluIC4gU1ZHIFZlcnNpb246IDYuMDAgQnVpbGQgMCkgIC0tPgo8c3ZnIHZlcnNpb249IjEuMSIgaWQ9IkxheWVyXzEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIHg9IjBweCIgeT0iMHB4IgoJIHZpZXdCb3g9IjAgMCAzOTcuNCA0My43IiBzdHlsZT0iZW5hYmxlLWJhY2tncm91bmQ6bmV3IDAgMCAzOTcuNCA0My43OyIgeG1sOnNwYWNlPSJwcmVzZXJ2ZSI+CjxzdHlsZSB0eXBlPSJ0ZXh0L2NzcyI+Cgkuc3Qwe2ZpbGw6I0ZGRkZGRjt9Cjwvc3R5bGU+CjxwYXRoIGNsYXNzPSJzdDAiIGQ9Ik0xNTEuNywyOS43Yy0yLjEsMi4yLTUuMSwzLjYtOC4zLDMuNmMtNi4zLDAtMTEuNS01LjItMTEuNS0xMS41czUuMi0xMS41LDExLjUtMTEuNWMyLjksMCw1LjYsMS4xLDcuNiwyLjkKCWMwLjYsMC41LDEuNywxLjYsMS43LDEuNmw3LTcuNWMtNC00LjUtOS44LTcuMy0xNi4zLTcuM2MtMTIsMC0yMS44LDkuNy0yMS44LDIxLjhjMCwxMiw5LjcsMjEuOCwyMS44LDIxLjhjNi44LDAsMTIuOS0zLDE2LjgtOAoJbC03LTcuNUMxNTMuMSwyOC4yLDE1Mi4yLDI5LjIsMTUxLjcsMjkuN3oiLz4KPHBhdGggY2xhc3M9InN0MCIgZD0iTTIzNC41LDI5LjdjLTIuMSwyLjItNS4xLDMuNi04LjMsMy42Yy02LjMsMC0xMS41LTUuMi0xMS41LTExLjVzNS4yLTExLjUsMTEuNS0xMS41YzIuOSwwLDUuNiwxLjEsNy42LDIuOQoJYzAuNiwwLjUsMS43LDEuNiwxLjcsMS42bDctNy41Yy00LTQuNS05LjgtNy4zLTE2LjMtNy4zYy0xMiwwLTIxLjgsOS43LTIxLjgsMjEuOGMwLDEyLDkuNywyMS44LDIxLjgsMjEuOGM2LjgsMCwxMi45LTMsMTYuOC04CglsLTctNy41QzIzNiwyOC4yLDIzNSwyOS4yLDIzNC41LDI5Ljd6Ii8+CjxwYXRoIGNsYXNzPSJzdDAiIGQ9Ik0yOS41LDIwLjljMy43LTEuNiw2LjQtNC41LDYuNC05LjN2LTAuMWMwLTIuOS0xLTUuMS0yLjctNi44QzMwLjcsMi4zLDI3LDAuOSwyMS44LDAuOUgwdjQxLjhoMjEuOQoJYzEwLDAsMTUuOC00LjQsMTUuOC0xMS41di0wLjFDMzcuNywyNS41LDM0LjUsMjIuNiwyOS41LDIwLjl6IE0xMS43LDEwLjJoNy41YzMuNSwwLDUuMiwxLjQsNS4yLDMuNnYwLjFjMCwyLjUtMS45LDMuNi01LjUsMy42CgloLTcuM0wxMS43LDEwLjJMMTEuNywxMC4yeiBNMjYuMiwyOS42YzAsMi41LTIsMy44LTUuNiwzLjhoLTl2LTcuN2g4LjhDMjQuMywyNS43LDI2LjEsMjcuMywyNi4yLDI5LjZMMjYuMiwyOS42TDI2LjIsMjkuNnoiLz4KPHBvbHlnb24gY2xhc3M9InN0MCIgcG9pbnRzPSI1NC42LDAuOSA0Mi45LDAuOSA0Mi45LDQyLjcgNzMuNCw0Mi43IDczLjQsMzIuNyA1NC42LDMyLjcgIi8+Cjxwb2x5Z29uIGNsYXNzPSJzdDAiIHBvaW50cz0iMjczLjMsMTYuOCAyNTguNCwxNi44IDI1OC40LDEuMSAyNDYuNywxLjEgMjQ2LjcsNDMgMjU4LjQsNDMgMjU4LjQsMjcuMSAyNzMuMywyNy4xIDI3My4zLDQzIAoJMjg0LjksNDMgMjg0LjksMS4yIDI3My4zLDEuMiAiLz4KPHBhdGggY2xhc3M9InN0MCIgZD0iTTMxNy43LDAuOGgtMTEuMkwyODguNyw0M2gxMi4ybDMtNy41SDMyMGwzLDcuNWgxMi40TDMxNy43LDAuOHogTTMwNy4yLDI2LjVsNC43LTExLjlsNC43LDExLjkKCUMzMTYuNiwyNi41LDMwNy4yLDI2LjUsMzA3LjIsMjYuNXoiLz4KPHJlY3QgeD0iMzM5LjEiIHk9IjEuMiIgY2xhc3M9InN0MCIgd2lkdGg9IjExLjYiIGhlaWdodD0iNDEuOSIvPgo8cG9seWdvbiBjbGFzcz0ic3QwIiBwb2ludHM9IjM4NS44LDEuMiAzODUuOCwyMy4zIDM2OC41LDEuMiAzNTcuNSwxLjIgMzU3LjUsNDMgMzY5LjIsNDMgMzY5LjIsMjAuMSAzODcuMSw0MyAzOTcuNCw0MyAzOTcuNCwxLjIgCgkiLz4KPHBvbHlnb24gY2xhc3M9InN0MCIgcG9pbnRzPSIyMDUuNCwxIDE5MS42LDEgMTkxLjYsMSAxOTEuNiwxIDE3Ny4yLDE4IDE3Ny4yLDEgMTY1LjYsMSAxNjUuNiw0Mi45IDE3Ny4yLDQyLjkgMTc3LjIsMzIuMSAKCTE4MS41LDI3LjQgMTkzLjIsNDIuOSAxOTMuMiw0Mi45IDE5My4yLDQyLjkgMjA3LDQyLjkgMTg5LjEsMTkgIi8+CjxwYXRoIGNsYXNzPSJzdDAiIGQ9Ik05Ni42LDBjLTEyLDAtMjEuOCw5LjctMjEuOCwyMS44YzAsMTIsOS43LDIxLjgsMjEuOCwyMS44YzEyLDAsMjEuOC05LjcsMjEuOC0yMS44QzExOC40LDkuOCwxMDguNywwLDk2LjYsMHoKCSBNOTYuNiwzMy4zYy02LjMsMC0xMS41LTUuMi0xMS41LTExLjVzNS4yLTExLjUsMTEuNS0xMS41YzYuMywwLDExLjUsNS4yLDExLjUsMTEuNVMxMDIuOSwzMy4zLDk2LjYsMzMuM3oiLz4KPGc+CjwvZz4KPGc+CjwvZz4KPGc+CjwvZz4KPGc+CjwvZz4KPGc+CjwvZz4KPGc+CjwvZz4KPGc+CjwvZz4KPGc+CjwvZz4KPGc+CjwvZz4KPGc+CjwvZz4KPGc+CjwvZz4KPGc+CjwvZz4KPGc+CjwvZz4KPGc+CjwvZz4KPGc+CjwvZz4KPC9zdmc+Cg=="
        width="100%"
      />
    </styled.img>
  </Image>
</ThemeProvider>
`;

exports[`Image should render correctly with selectable 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  cursor: pointer;
  object-fit: contain;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Image
    height="100%"
    name="logo"
    selectable={true}
    theme={
      Object {
        "buttonBackgroundColor": "#004A7C",
        "buttonColor": "#FFF",
        "buttonHoverColor": "#0068af",
        "cartridgeBackgroundColor": "#004A7C",
        "cartridgeColor": "#FFF",
        "circleBadgeBackgroundColor": "#CCC",
        "circleBadgeHoverColor": "#004A7C",
        "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
        "dropdownColor": "#545456",
        "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
        "iconColor": "#545456",
        "iconHoverColor": "#757679",
        "inputBackgroundColor": "#FFF",
        "inputBorderColor": "#CCC",
        "inputColor": "#545456",
        "linkColor": "#545456",
        "linkHoverColor": "#004A7C",
        "panelBackgroundColor": "#FFF",
        "panelShadowColor": "#EEF2F5",
        "searchBarIconBackgroundColor": "#FFCA00",
        "searchBarInputBackgroundColor": "#FFF",
        "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
        "searchBarUnderlinedBorderColor": "#CCC",
        "sectionBackgroundColor": "#004A7C",
        "tabMenuBarColor": "#FFCA00",
        "tabMenuBorderColor": "#EEF2F5",
        "tableCellEvenBackgroundColor": "#F8F8F8",
        "tableCellOddBackgroundColor": "#FFF",
        "tableHeaderColor": "#999B9E",
        "tableShadowColor": "#EEF2F5",
        "textColor": "#545456",
      }
    }
    width="100%"
  >
    <styled.img
      height="100%"
      name="logo"
      selectable={true}
      theme={
        Object {
          "buttonBackgroundColor": "#004A7C",
          "buttonColor": "#FFF",
          "buttonHoverColor": "#0068af",
          "cartridgeBackgroundColor": "#004A7C",
          "cartridgeColor": "#FFF",
          "circleBadgeBackgroundColor": "#CCC",
          "circleBadgeHoverColor": "#004A7C",
          "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
          "dropdownColor": "#545456",
          "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
          "iconColor": "#545456",
          "iconHoverColor": "#757679",
          "inputBackgroundColor": "#FFF",
          "inputBorderColor": "#CCC",
          "inputColor": "#545456",
          "linkColor": "#545456",
          "linkHoverColor": "#004A7C",
          "panelBackgroundColor": "#FFF",
          "panelShadowColor": "#EEF2F5",
          "searchBarIconBackgroundColor": "#FFCA00",
          "searchBarInputBackgroundColor": "#FFF",
          "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
          "searchBarUnderlinedBorderColor": "#CCC",
          "sectionBackgroundColor": "#004A7C",
          "tabMenuBarColor": "#FFCA00",
          "tabMenuBorderColor": "#EEF2F5",
          "tableCellEvenBackgroundColor": "#F8F8F8",
          "tableCellOddBackgroundColor": "#FFF",
          "tableHeaderColor": "#999B9E",
          "tableShadowColor": "#EEF2F5",
          "textColor": "#545456",
        }
      }
      width="100%"
    >
      <img
        alt="logo"
        className="c0"
        height="100%"
        name="logo"
        src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiPz4KPCEtLSBHZW5lcmF0b3I6IEFkb2JlIElsbHVzdHJhdG9yIDIxLjAuMSwgU1ZHIEV4cG9ydCBQbHVnLUluIC4gU1ZHIFZlcnNpb246IDYuMDAgQnVpbGQgMCkgIC0tPgo8c3ZnIHZlcnNpb249IjEuMSIgaWQ9IkxheWVyXzEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIHg9IjBweCIgeT0iMHB4IgoJIHZpZXdCb3g9IjAgMCAxMDMuOSAxMDMuOSIgc3R5bGU9ImVuYWJsZS1iYWNrZ3JvdW5kOm5ldyAwIDAgMTAzLjkgMTAzLjk7IiB4bWw6c3BhY2U9InByZXNlcnZlIj4KPHN0eWxlIHR5cGU9InRleHQvY3NzIj4KCS5zdDB7ZmlsbDojMDBBRUU2O30KCS5zdDF7ZmlsbDojMTIzOTYyO30KCS5zdDJ7ZmlsbDojQjFENEU1O30KCS5zdDN7ZmlsbDojMjc1NEJBO30KCS5zdDR7ZmlsbDojNzk5RUIyO30KPC9zdHlsZT4KPGc+Cgk8cGF0aCBjbGFzcz0ic3QwIiBkPSJNMzguNiw1MkwxNyw3My41bDI3LjEsMjcuMWM0LjQsNC40LDExLjQsNC40LDE1LjgsMGwyNy4xLTI3LjFMNjUuMyw1Mkw1MiwzOC42TDM4LjYsNTJ6Ii8+Cgk8cGF0aCBjbGFzcz0ic3QxIiBkPSJNMTcsMzAuNEwzLjMsNDQuMWMtNC40LDQuNC00LjQsMTEuNCwwLDE1LjhMMTcsNzMuNUwzOC42LDUyTDUyLDM4LjZMMzAuNCwxN0wxNywzMC40eiIvPgoJPHBhdGggY2xhc3M9InN0MiIgZD0iTTczLjUsNjAuMWwxMy40LDEzLjRsMTMuNy0xMy43YzQuNC00LjQsNC40LTExLjQsMC0xNS44bC01LjUtNS41TDczLjUsNjAuMXoiLz4KCTxwb2x5Z29uIGNsYXNzPSJzdDIiIHBvaW50cz0iNjUuMyw1MiA2NS4zLDUyIDUyLDM4LjYgNzMuNSwxNyA3My41LDE3IDUyLDM4LjYgCSIvPgoJPHBvbHlnb24gY2xhc3M9InN0MyIgcG9pbnRzPSI1MiwzOC42IDY1LjMsNTIgNzMuNSw2MC4xIDk1LjEsMzguNiA4Ni45LDMwLjQgNzMuNSwxNyAJIi8+Cgk8cGF0aCBjbGFzcz0ic3Q0IiBkPSJNNzMuNSwxN0w1OS44LDMuM2MtNC40LTQuNC0xMS40LTQuNC0xNS44LDBMMzAuNCwxN0w1MiwzOC42TDczLjUsMTd6Ii8+CjwvZz4KPC9zdmc+Cg=="
        width="100%"
      />
    </styled.img>
  </Image>
</ThemeProvider>
`;
